# you-plus-web

./: .gitignore  AWS_SETUP_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DODOPAYMENTS_CHANGES.md  DODOPAYMENTS_SETUP.md  GOOGLE_OAUTH_SETUP.md  README.md  roadmap.md
agent/: .cartesiaignore  .env.example  .gitignore  POST_MVP.md  agent.py  cartesia.toml  cartesia.yaml  chat_node.py  config.py  main.py  pyproject.toml  pyrightconfig.json
agent/.cartesia/: config.toml
agent/agents/: __init__.py  aggregator.py  analyzers.py  background_agents.py  detectors.py  events.py
agent/content/: __init__.py  templates.py
agent/conversation/: __init__.py  call_types.py  future_self.py  identity_questions.py  mood.py  persona.py  stages.py
agent/conversation/stages/: __init__.py  config.py  models.py  transitions.py
agent/core/: __init__.py  chat_node.py  config.py  llm.py  main.py
agent/core/groq_utils/: __init__.py  groq_client.py
agent/core/handlers/: __init__.py  call.py  post_call.py  pre_call.py
agent/core/llm_client/: __init__.py  client.py
agent/core/prompts/: __init__.py  legacy.py  prompt_sections.py
agent/docs/: FUTURE_SELF_SYSTEM.md  PERSONA_IMPLEMENTATION_PLAN.md  PERSONA_TASKS.md  database.sql  db.sql  reagent.md  reagent3.md  regent-2.md
agent/services/: __init__.py  call_analytics.py  excuse_patterns.py  future_self_service.py  goals.py  supermemory.py  trust_score.py  user_context.py
agent/services/goals/: crud.py  (+4 more)
agent/skills/: voice_conversation.md
agent/tests/: __init__.py  test_background_agents.py  test_local.py  test_scenarios.py
(+370 files in other folders)
